--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -10,8 +10,14 @@ ion-content {
       }
     }
 
-    #indicators {
-        color: red;
+    #content {
+       
+        height: 20%;
+        
+        
+      }
+
+      #indicators {
         padding: 16px;
         height: 40%;
         width: 100%;
