--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,19 @@
 
 <ion-content [fullscreen]="true">
   <div id="map"></div>
+  
+
+
+  <div id="content">
+    <ion-button size="small" shape="round" fill="clear" id="conductor"><u>Elias trujillo - Disponibibilidad para 3 personas- Camioneta 4x4 Destino-"Parque Ines de Suarez
+      " - Tarifa del Viaje : $2800</u></ion-button>
+      <ion-button size="small" shape="round" fill="clear" id="conductor"><u>Sebastian Luarte - Disponibilidad para 2 personas- Suzuki Rio - Destino "La Florida" con detencion en "Recoleta" - Tarifa del Viaje : $6500
+        </u></ion-button>
+    
+
+  </div>
+  
   <div id="indicators"></div>
 
-</ion-content>
 
+</ion-content>
